second commit. Added contact info

--- a/contacts.html
+++ b/contacts.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>About Us</title>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald" type="text/css">
-    <link rel="stylesheet" type="text/css" href="css/styleAboutUs.css" />
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" type="text/css" href="css/styleAboutUs.css"/>
+    <link rel="stylesheet" type="text/css" href="css/styleContactTable.css">
 </head>
 <body>
 <div id="wrapper">
@@ -26,10 +27,20 @@
         <div id="content">
             <div class="posts" id="post1">
                 <h2>Наши контактные данные</h2>
-                <p>
-                    <strong>Наш адрес</strong> не дом и не улица, наш адрес <strong id="USSR" style="color: red">Советский Союз</strong>.
-                </p>
-                <img src="img/USSR.jpg" alt="USSR" id="imageUSSR" style="width: 60%; margin-left: 20%">
+                <table class="contact-table table">
+                    <tr>
+                        <th>Адрес:</th>
+                        <td><a href="https://2gis.ru/tomsk/firm/423196012851647">ул. Вершинина, 74, Томск, Томская обл., 634034</a></td>
+                    </tr>
+                    <tr>
+                        <th>Телефон:</th>
+                        <td>+79999999999, +79999999998</td>
+                    </tr>
+                    <tr>
+                        <th>Email:</th>
+                        <td>emailcompany@mail.com</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
