--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="posts" id="post1">
                 <h2>Что такое виртуальная реальность</h2>
                 <p>
-                    <strong>3D виртуальная реальность</strong> – это не вымысел фантастов. Это реалия сегодняшнего дня, активно проникающая в человеческую жизнь. Компания «Virtuality Club» занимается осуществлением развлекательных услуг с использованием VR технологий, реализацией очков виртуальной реальности, предоставлением аттракционов виртуальной реальности в аренду, а также разработкой программ и приложений. Мы сторонники инновационных технологий, поэтому не устанавливаем высоких цен на свою продукцию.
+                    <strong>3D виртуальная реальность</strong> – это не вымысел фантастов. Это реалия сегодняшнего дня, активно проникающая в человеческую жизнь. Компания «VirtGames» занимается осуществлением развлекательных услуг с использованием VR технологий, реализацией очков виртуальной реальности, предоставлением аттракционов виртуальной реальности в аренду, а также разработкой программ и приложений. <p>Мы сторонники инновационных технологий, поэтому не устанавливаем высоких цен на свои услуги.
                 </p>
             </div>
             <img id="fixedImg" src="img/welcomeImg.jpg" alt="playStation">
