--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
                 <table class="contact-table table">
                     <tr>
                         <th>Адрес:</th>
-                        <td><a href="https://2gis.ru/tomsk/firm/423196012851647">ул. Вершинина, 74, Томск, Томская обл., 634034</a></td>
+                        <td><a href="https://2gis.ru/tomsk/firm/423196012851647" id="TuGis">ул. Вершинина, 74, Томск, Томская обл., 634034</a></td>
                     </tr>
                     <tr>
                         <th>Телефон:</th>
